include ../../oracc-am-rules.txt

bin_SCRIPTS = atf2ascii.plx atfdroppq.plx atfid.plx atfsignnames.plx \
	atfsplit.plx atftemplate.plx dist-files.plx install.sh mklists.plx \
	rebuild.sh addspacer.plx atf-fix-lem.plx atf-fix-n.plx atf-lem-nolem.plx \
	atf2uni.plx atfcat.plx atfcomment.plx atfglobal.plx atfgrabpq.plx \
	atfhavelem.plx atfjoin.plx atflists.plx atfmap.plx atfnewnum.plx \
	atfnum.plx atforder.plx atfproject.plx atfquicklem.plx atfrenum.plx \
	atfslash.plx atfsort.plx atfsquare.plx atfstats.plx atftr.plx atfxhash.plx \
	cleanpns.plx diffhack.plx dollar-fixtailmisaligns.plx fixdoll.plx \
	lemerr.plx lemerr2.plx mksubcorpora.sh remove-bad.sh repo-status.plx \
	repo-status.sh sort-by-size.plx unloose.plx unstrict.plx ur3uniq.plx \
	invert-lem-dump.plx revert-lem-dump.plx prune-lists.plx atfsuxlem.plx \
	atflemfix.plx mk-atf-reptab.plx lem-err-culprits.sh atfchunk.plx \
	atffix-p.plx atf-cdli.sh ox4.plx ox4-emesal.plx atf-uni-lem.plx \
	atfstrip.plx atf-igigal.plx lemstats.plx fix-x-times.plx atfinstall.plx

#atfreplace.plx

atfsignnames.plx: atfsignnames.plx.in
	$(ORACCIFY) atfsignnames.plx.in

atfdroppq.plx: atfdroppq.plx.in
	$(ORACCIFY) atfdroppq.plx.in

atftemplate.plx: atftemplate.plx.in
	$(ORACCIFY) atftemplate.plx.in

dist-files.plx: dist-files.plx.in
	$(ORACCIFY) dist-files.plx.in

mklists.plx: mklists.plx.in
	$(ORACCIFY) mklists.plx.in

atf2ascii.plx: atf2ascii.plx.in
	$(ORACCIFY) atf2ascii.plx.in

install.sh: install.sh.in
	$(ORACCIFY) install.sh.in

rebuild.sh: rebuild.sh.in
	$(ORACCIFY) rebuild.sh.in

atfid.plx: atfid.plx.in
	$(ORACCIFY) atfid.plx.in

atfsplit.plx: atfsplit.plx.in
	$(ORACCIFY) atfsplit.plx.in

EXTRA_DIST = \
	Unicode.pm \
	addspacer.plx \
	atf-fix-lem.plx \
	atf-fix-n.plx \
	atf-lem-nolem.plx \
	atf2ascii.plx.in \
	atf2uni.plx \
	atfcat.plx \
	atfcomment.plx \
	atfdroppq.plx.in \
	atfglobal.plx \
	atfgrabpq.plx \
	atfhavelem.plx \
	atfid.plx.in \
	atfjoin.plx \
	atflists.plx \
	atfmap.plx \
	atfnewnum.plx \
	atfnum.plx \
	atforder.plx \
	atfproject.plx \
	atfquicklem.plx \
	atfrenum.plx \
	atfsignnames.plx.in \
	atfslash.plx \
	atfsort.plx \
	atfsplit.plx.in \
	atfsquare.plx \
	atfstats.plx \
	atftemplate.plx.in \
	atftr.plx \
	atfxhash.plx \
	cleanpns.plx \
	diffhack.plx \
	dist-files.plx.in \
	dollar-fixtailmisaligns.plx \
	fixdoll.plx \
	install.sh.in \
	lemerr.plx \
	lemerr2.plx \
	mklists.plx.in \
	mksubcorpora.sh \
	rebuild.sh.in \
	remove-bad.sh \
	repo-status.plx \
	repo-status.sh \
	sort-by-size.plx \
	unloose.plx \
	unstrict.plx \
	ur3uniq.plx
