include ../../oracc-am-rules.txt

bin_SCRIPTS = atf2catf.sh catf-fixer.plx catf-manager.plx
scriptdata_DATA = gdl-ATF.xsl gdl-OATF.xsl xtf-CATF.xsl
data_DATA = catf-aliases.xml

EXTRA_DIST = \
	CATF.pm \
	atf2catf.sh \
	catf-aliases.xml \
	catf-fixer.plx \
	catf-manager.plx \
	gdl-ATF.xsl \
	gdl-OATF.xsl \
	xtf-CATF.xsl
