include ../../oracc-am-rules.txt

bin_SCRIPTS = atf2catf.sh catf-fixer.plx catf-manager.plx oatf-manager.plx xsf-unpack-P.plx
scriptdata_DATA = gdl-OATF.xsl xtf-CATF.xsl xtf-OATF.xsl xtf-TATF.xsl xsf-Q-to-P.xsl \
	gdl-FRAGS.xsl xtf-FRAGS.xsl
data_DATA = catf-aliases.xml

EXTRA_DIST = \
	CATF.pm \
	atf2catf.sh \
	catf-aliases.xml \
	catf-fixer.plx \
	catf-manager.plx \
	oatf-manager.plx \
	gdl-OATF.xsl \
	xtf-CATF.xsl \
	xtf-OATF.xsl \
	xtf-TATF.xsl
