include ../../oracc-am-rules.txt

bin_SCRIPTS = cbdpp.plx c11e.plx cbdbases.plx cbdformbase.plx \
	forms-uniq-form.plx forms-uniq-full.plx \
	cbdsenses.plx cbdhash.plx cbdxml.plx cbdwords.plx \
	cbdtest.plx cbdcompare.plx cbdnoinst.plx \
	make-fixes-tab.plx cbdmerge.plx nonorm.plx \
	cbdentries.plx cbdepsd.plx cbd-lem-fix.plx \
	cbdsubset.plx cbdfix.plx cbdqpnsplit.plx cbdfixatf.plx \
	cbdalignbases.plx cbdalignsenses.plx cbdalignentries.plx \
	cbdalignforms.plx cbdfixparts.plx \
	cbd-super-compare.plx cbd-super-map-sigs.plx \
	cbd-super-map-glos.plx cbdparts.plx cbd-count-insts.sh \
	cbdequivs.plx cbdsort.plx \
	cbd-pull-forms.plx cbd-merge-forms.plx dotforms-dups.plx \
	cbdcollo.plx cbdoid.plx cbd-bases-tab.plx cbd-add-oid.plx \
	cbd-fix-glo.plx cbdstash.plx cbdminglo.sh

scriptdata_DATA = entry-counts.xsl
data_DATA = 
schema_DATA = 
