include ../../oracc-am-rules.txt

bin_SCRIPTS = cbdpp.plx c11e.plx cbdbases.plx cbdformbase.plx \
	forms-uniq-form.plx forms-uniq-full.plx \
	forms-add-dot-forms.sh forms-augment-post.plx \
	forms-drop-zero.plx \
	cbdsenses.plx cbdhash.plx cbdxml.plx cbdwords.plx \
	cbdtest.plx cbdcompare.plx cbdnoinst.plx \
	make-fixes-tab.plx cbdmerge.plx nonorm.plx \
	cbdentries.plx cbdepsd.plx \
	cbdsubset.plx cbdfix.plx cbdqpnsplit.plx cbdfixatf.plx \
	cbdalignbases.plx cbdalignsenses.plx cbdalignentries.plx \
	cbdalignforms.plx cbdfixparts.plx \
	cbd-super-compare.plx cbd-super-map-sigs.plx \
	cbd-super-map-glos.plx cbdparts.plx cbd-count-insts.sh \
	cbdequivs.plx cbdsort.plx cbd-fix-glo.plx \
	cbd-pull-forms.plx cbd-merge-forms.plx \
	cbdcollo.plx cbdoid.plx cbd-bases-tab.plx cbd-add-oid.plx \
	cbdstash.plx cbdminglo.sh cbdedit.plx \
	base-instances.plx cbdhistory.plx cbd forms-cull-zero.plx \
	bases-cull-zero.plx entry-instances.plx cbd-super-map-tab.plx \
	history-all.sh cbd-tidy.sh cbd-trusted.plx cbd-drop-epsd2.sh \
	base-audit.plx base-count.plx cbd-from_glo.sh cbdbasenoform.plx \
	base-redup.plx cbd-check-form-base.plx cbd-fix-form-base.plx \
	sig-stats.plx sig-psu-forms.plx sigs-invert.plx \
	cbdskel.sh cbd-pull-dups.plx \
	cbd-fbm.plx cbd-add-base-form.plx \
	bases-add-map-bases.plx cbd-diff.sh \
	entry-homographs.plx entries-log-homographs.sh cbd-find-homographs.plx \
	cbd-merge-dups.plx cbd-NN-coerce-senses.plx NN-normalize.plx \
	cbd2atf.plx cbd-drop-form-dups.plx \
	dotforms-diff.plx dotforms-dups.plx dotforms-sigs.plx \
	hist-to-glo-fix.sh cbd-sig2glo.sh cbd-err-entries.plx \
	cbd-drop-qpn.plx cbd-nn-alias-tab.plx sigoid.plx \
	forms-fix-bases.plx cbdcompareforms.plx forms-fix-forms.plx \
	cbd-why-because.plx cbd-parts-history.plx cbd-ripforms.plx \
	forms-chars-check.plx cbdfile.plx art2div.sh cbdids.plx \
	sigs-dotforms.plx forms-fix-dotforms.plx cbd-nn-re-sense.plx

# cbd-glo-fix.plx cbd-lem-fix.plx # now in old/

scriptdata_DATA = entry-counts.xsl art-HTML-div.xsl

data_DATA = 

schema_DATA = 
