include ../../oracc-am-rules.txt

bin_SCRIPTS = install.sh
emacsdata_DATA = atf-mode.el cbd-mode.el cuneitex.el oracc-defaults.el oracc-init.el \
	oracc-project.el outline-magic.el rnc-mode.el xml-rpc.el xquery-mode.el

downloads_DATA=atf-mode.zip emacsw32-utils.zip

EXTRA_DIST = \
	atf-mode.el \
	cbd-mode.el \
	cuneitex.el \
	install.sh \
	oracc-defaults.el \
	oracc-init.el \
	oracc-project.el \
	outline-magic.el \
	rnc-mode.el \
	xml-rpc.el \
	xquery-mode.el
