include ../../oracc-am-rules.txt

bin_SCRIPTS = esp-init.sh esp-live.sh esp-lmt.plx esp-no-nmtok-err.plx esp-remove-webfiles.sh esp.sh
css_DATA = textsizeminus1.css textsizeminus2.css textsizeminus3.css textsizeplus1.css textsizeplus2.css textsizeplus3.css textsizeplus4.css textsizeplus5.css
js_DATA = library.js
scriptdata_DATA = esp-alphabet.xslt esp-chars-iso-8859-1.xslt esp-chars-markup-internationalization.xslt esp-chars-symbols-maths-greek.xslt esp-dumb-quotes.xslt esp-functions.xslt esp-images-info.xslt esp-menu.xslt esp-phase-01.xslt esp-phase-02.xslt esp-phase-03.xslt esp-phase-04.xslt esp-phase-05.xslt esp-references.xslt esp-saxon-collate.xslt esp-site-map.xslt esp-stylesheets.xslt
img_DATA = blank.gif
java_DATA = ImageInfo.class

EXTRA_DIST = \
	ImageInfo.class \
	blank.gif \
	esp-alphabet.xslt \
	esp-chars-iso-8859-1.xslt \
	esp-chars-markup-internationalization.xslt \
	esp-chars-symbols-maths-greek.xslt \
	esp-dumb-quotes.xslt \
	esp-functions.xslt \
	esp-images-info.xslt \
	esp-init.sh \
	esp-live.sh \
	esp-lmt.plx \
	esp-menu.xslt \
	esp-no-nmtok-err.plx \
	esp-phase-01.xslt \
	esp-phase-02.xslt \
	esp-phase-03.xslt \
	esp-phase-04.xslt \
	esp-phase-05.xslt \
	esp-references.xslt \
	esp-remove-webfiles.sh \
	esp-saxon-collate.xslt \
	esp-site-map.xslt \
	esp-stylesheets.xslt \
	esp.sh \
	library.js \
	textsizeminus1.css \
	textsizeminus2.css \
	textsizeminus3.css \
	textsizeplus1.css \
	textsizeplus2.css \
	textsizeplus3.css \
	textsizeplus4.css \
	textsizeplus5.css
