include ../../oracc-am-rules.txt

bin_SCRIPTS = esp2-init.sh esp2-live.sh esp2-lmt.plx esp2-no-nmtok-err.plx esp2-remove-webfiles.sh esp2.sh 

css_DATA = css/textsizeminus1.css css/textsizeminus2.css css/textsizeminus3.css \
	css/textsizeplus1.css css/textsizeplus2.css css/textsizeplus3.css css/textsizeplus4.css \
	css/textsizeplus5.css
js_DATA = js/library.js
scriptdata_DATA = esp2-alphabet.xslt esp2-chars-iso-8859-1.xslt esp2-chars-markup-internationalization.xslt esp2-chars-symbols-maths-greek.xslt esp2-dumb-quotes.xslt esp2-functions.xslt esp2-menu.xslt esp2-phase-01.xslt esp2-phase-02.xslt esp2-phase-03.xslt esp2-phase-04.xslt esp2-phase-05.xslt esp2-references.xslt esp2-saxon-collate.xslt esp2-site-map.xslt esp2-stylesheets.xslt
img_DATA = blank.gif
java_DATA = ImageInfo.class

EXTRA_DIST = \
	ImageInfo.class \
	blank.gif \
	esp2-alphabet.xslt \
	esp2-chars-iso-8859-1.xslt \
	esp2-chars-markup-internationalization.xslt \
	esp2-chars-symbols-maths-greek.xslt \
	esp2-dumb-quotes.xslt \
	esp2-functions.xslt \
	esp2-init.sh \
	esp2-live.sh \
	esp2-lmt.plx \
	esp2-menu.xslt \
	esp2-no-nmtok-err.plx \
	esp2-phase-01.xslt \
	esp2-phase-02.xslt \
	esp2-phase-03.xslt \
	esp2-phase-04.xslt \
	esp2-phase-05.xslt \
	esp2-references.xslt \
	esp2-remove-webfiles.sh \
	esp2-saxon-collate.xslt \
	esp2-site-map.xslt \
	esp2-stylesheets.xslt \
	esp2.sh \
	library.js \
	textsizeminus1.css \
	textsizeminus2.css \
	textsizeminus3.css \
	textsizeplus1.css \
	textsizeplus2.css \
	textsizeplus3.css \
	textsizeplus4.css \
	textsizeplus5.css
