include ../../oracc-am-rules.txt

bin_SCRIPTS = est-all-projects.sh est-clean-keys.plx est-corpus.sh est-glo.sh est-index-uris.plx est-oracc.sh est-pqx.sh est-project.sh est-projuri.sh est-sudo.sh clean-estindex-log.sh
scriptdata_DATA = est-articles.xsl est-glossary.xsl est-PQX.xsl est-projuri.xsl
data_DATA = empty.xml

EXTRA_DIST = \
	empty.xml \
	est-PQX.xsl \
	est-all-projects.sh \
	est-articles.xsl \
	est-clean-keys.plx \
	est-corpus.sh \
	est-glo.sh \
	est-glossary.xsl \
	est-index-uris.plx \
	est-oracc.sh \
	est-pqx.sh \
	est-project.sh \
	est-projuri.sh \
	est-projuri.xsl \
	est-sudo.sh
